Node list filtering
Change-Id: I5561c66984f368e19813c765d59029faeb12610f

--- a/nailgun/static/templates/cluster/nodes_management_panel.html
+++ b/nailgun/static/templates/cluster/nodes_management_panel.html
@@ -12,6 +12,11 @@
         <% } %>
         <% }) %>
         </select>
+
+    </div>
+    <div class="cluster-toolbar-item  nodes-filter">
+        <label data-i18n="cluster_page.nodes_tab.node_management_panel.filter_by"></label>
+        <input name="filtering" type="text" placeholder="Node name/mac" <%= nodes.length ? '' : 'disabled' %>  />
     </div>
     <% if (clusterNodesScreen) { %>
     <div class="cluster-toolbar-item pull-right">
