--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -726,10 +726,18 @@ label.error {
 
 .nodes-management-panel {
   .nodes-filter {
-    width: 300px;
+    width: auto;
+    margin-top: -30px;
+    label {
+      float: none;
+    }
+    input[type=text] {
+      width: 105px;
+    }
   }
   .nodes-filter select {
     margin: 0;
+    width: 185px;
   }
   .batch-actions-buttons {
     text-align: right;
