Node list filtering
Change-Id: I5561c66984f368e19813c765d59029faeb12610f

--- a/nailgun/static/templates/cluster/node_list.html
+++ b/nailgun/static/templates/cluster/node_list.html
@@ -32,7 +32,9 @@
     </div>
   <% } else { %>
     <% if (!nodes.length) { %>
-      <div class="alert alert-warning"><%- cluster ? edit ? $.t('cluster_page.nodes_tab.no_selected_nodes') : $.t('cluster_page.nodes_tab.no_nodes_in_environment') : $.t('cluster_page.nodes_tab.no_nodes_in_fuel') %></div>
+      <div class="alert alert-warning">
+      <%- totalNodesAmount ? $.t('cluster_page.nodes_tab.no_filtered_nodes_warning') : cluster ? edit ? $.t('cluster_page.nodes_tab.no_selected_nodes') : $.t('cluster_page.nodes_tab.no_nodes_in_environment') : $.t('cluster_page.nodes_tab.no_nodes_in_fuel') %>
+      </div>
     <% } %>
     <div class="nodes"></div>
   <% } %>
