--- a/nailgun/static/templates/cluster/nodes_management_panel.html
+++ b/nailgun/static/templates/cluster/nodes_management_panel.html
@@ -13,6 +13,12 @@
         <% }) %>
         </select>
     </div>
+    <% if (!edit) { %>
+    <div class="cluster-toolbar-item  nodes-filter">
+        <label data-i18n="cluster_page.nodes_tab.node_management_panel.filter_by"></label>
+        <input name="filtering" type="text" placeholder="<%- $.t('cluster_page.nodes_tab.node_management_panel.filter_placeholder') %>" <%= nodes.length ? '' : 'disabled' %>  />
+    </div>
+    <% } %>
     <% if (clusterNodesScreen) { %>
     <div class="cluster-toolbar-item pull-right">
         <button class="btn btn-danger btn-delete-nodes"><i class="icon-trash"></i><span data-i18n="common.delete_button"></span></button>
