--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -640,13 +640,13 @@ label.error {
   color: @color-nodes-rule-list;
   font-size: 10px;
   text-transform: uppercase;
-  > ul {
+  ul {
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
     .margin-padding-mixin;
     margin-top: 1px;
     float: left;
     -webkit-font-smoothing: @font-aliasing;
-    > li {
+    li {
       display: inline-block;
       float: left;
       margin-right: 3px;
@@ -655,19 +655,10 @@ label.error {
         font-weight: bold;
         content: '·';
       }
-      &:empty {
-        display: none;
-      }
-      &:last-child:after {
-        margin-left: 3px;
-        font-weight: bold;
-        content: '·';
-      }
+      &:last-child:after { content: ''; }
     }
   }
-  > .pending-roles li {
-    color: #468847;
-  }
+  .pending-roles li { color: #468847; }
 }
 
 .node-button {
