--- a/nailgun/static/templates/cluster/settings_group.html
+++ b/nailgun/static/templates/cluster/settings_group.html
@@ -1,10 +1,21 @@
 <% var disabled = locked ? 'disabled' : '' %>
 <% var ns = "cluster_page.settings_tab." + groupName + "." %>
-<legend class="openstack-settings"><%- $.t(ns + 'group_name', {defaultValue: groupName.replace('_', ' ')}) %></legend>
+
+<legend class="openstack-settings">
+<% if (settings.metadata && settings.metadata.toggleable){ %>
+    <div style="float:left; margin-top: -6px; margin-right: 12px;">
+      <div class="custom-tumbler">
+              <input type="checkbox"  class="disable-section" name="<%- groupName %>.enabled" />
+              <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
+      </div>
+    </div>
+  <% } %>
+  <%- $.t(ns + 'group_name', {defaultValue: groupName.replace('_', ' ')}) %>
+</legend>
 <div class="settings-group" data-settings-group="<%- groupName %>">
-  <% var sortedSettings = _.sortBy(_.keys(settings), function(setting) {return settings[setting].weight;}) %>
+  <% var sortedSettings = _.sortBy(_.keys(settings), function(setting) {return settings[setting].weight;}); %>
   <% _.each(sortedSettings, function(settingName) { %>
-    <% var setting = settings[settingName] %>
+    <% var setting = settings[settingName]; %>
     <% if (setting.type == 'checkbox') { %>
       <label class="parameter-box clearfix">
         <div class="parameter-control">
@@ -35,7 +46,7 @@
       <% }) %>
       </div>
       <div class="parameter-spacer"></div>
-    <% } else if (setting.type != 'hidden') { %>
+    <% } else if (setting.type != 'hidden' && settingName !=='metadata') { %>
       <label class="parameter-box clearfix">
         <div class="openstack-sub-title parameter-name"><%- $.t(ns + settingName + '.label', {defaultValue: setting.label}) %></div>
         <div class="parameter-control <%= setting.type == 'password' ? 'input-append' : '' %>">
