Making Tenant and username disabled
added disabled attribute in openstack.yaml

Change-Id: I5c595ba45433ffbc3eab2ee8d0b3f072d5820592
Closes-bug: 1283703

--- a/nailgun/static/templates/cluster/settings_group.html
+++ b/nailgun/static/templates/cluster/settings_group.html
@@ -1,10 +1,10 @@
-<% var disabled = locked ? 'disabled' : '' %>
 <% var ns = "cluster_page.settings_tab." + groupName + "." %>
 <legend class="openstack-settings"><%- $.t(ns + 'group_name', {defaultValue: groupName.replace('_', ' ')}) %></legend>
 <div class="settings-group" data-settings-group="<%- groupName %>">
   <% var sortedSettings = _.sortBy(_.keys(settings), function(setting) {return settings[setting].weight;}) %>
   <% _.each(sortedSettings, function(settingName) { %>
     <% var setting = settings[settingName] %>
+    <% var disabled = locked || setting.disabled ? 'disabled' : '' %>
     <% if (setting.type == 'checkbox') { %>
       <label class="parameter-box clearfix">
         <div class="parameter-control">
