Warning for different speed interface bonding
added warning and error if LACP bond type selected

Change-Id: I0b59c9c468b2554d6042295669cd970be0d84234
Closes-bug: 1287830

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -2905,6 +2905,10 @@ hr.slim {
   }
 }
 
+.bond-speed-warning {
+  margin: 10px 0 0 20px;
+}
+
 .physical-network-checkbox {
   display: block;
   float: left;
