--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -2905,6 +2905,11 @@ hr.slim {
   }
 }
 
+.bond-speed-warning,
+.bond-speed-error{
+  margin: 10px 0 0 20px;
+}
+
 .physical-network-checkbox {
   display: block;
   float: left;
