Warning for different speed interface bonding
added warning and error if LACP bond type selected

Change-Id: I0b59c9c468b2554d6042295669cd970be0d84234
Closes-bug: 1287830

--- a/nailgun/static/templates/cluster/node_interface.html
+++ b/nailgun/static/templates/cluster/node_interface.html
@@ -4,8 +4,7 @@
 <div class="physical-network-box" data-name="<%- ifc.get('name') %>">
   <div class="network-box-item">
     <% if (ifc.isBond()) { %>
-      <% var slaveInterfaceNames = _.pluck(ifc.get('slaves'), 'name') %>
-      <% slaveInterfaces = ifc.collection.filter(function(slaveInterface) {return _.contains(slaveInterfaceNames, slaveInterface.get('name'))}) %>
+      <% slaveInterfaces = ifc.getSlaveInterfaces() %>
       <div class="network-box-name">
         <% if (bondingAvailable) { %>
           <label>
