--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -2906,6 +2906,10 @@ hr.slim {
   }
 }
 
+.bond-speed-warning {
+  margin: 10px 0 0 20px;
+}
+
 .physical-network-checkbox {
   display: block;
   float: left;
