--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -3008,7 +3008,8 @@ hr.slim {
   }
 }
 
-.logical-network-group.disabled .logical-network-item[data-name=fuelweb_admin]:hover {
+.logical-network-group.disabled .logical-network-item[data-name=fuelweb_admin]:hover,
+.logical-network-group.locked .logical-network-item:hover {
   cursor: not-allowed;
 }
 
