OpenStack Settings tab UI validation
Closes-Bug: #1251232

Change-Id: I047f431e034a4f16884e595e094eb0761fb6d3f3

--- a/nailgun/static/templates/cluster/settings_tab.html
+++ b/nailgun/static/templates/cluster/settings_tab.html
@@ -1,6 +1,6 @@
 <div class="openstack-settings wrapper <%= locked ? 'changes-locked' : '' %>">
 
-  <h3 data-i18n="cluster_page.settings_tab.title">OpenStack Settings</h3>
+  <h3 data-i18n="cluster_page.settings_tab.title"></h3>
 
   <% if (cluster.get('settings').deferred.state() != 'pending') { %>
     <div class="settings"></div>
