--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -2667,6 +2667,7 @@ input.error:focus {
   .box-sizing-mixin;
   width: 560px;
   margin-top: 4px;
+  &.validation-error { color: @fuel-deep-red; }
 }
 
 .parameter-spacer {
