--- a/nailgun/static/templates/cluster/nodes_management_panel.html
+++ b/nailgun/static/templates/cluster/nodes_management_panel.html
@@ -16,6 +16,7 @@
     <div class="cluster-toolbar-item  nodes-filter">
       <label data-i18n="cluster_page.nodes_tab.node_management_panel.filter_by"></label>
       <input name="filter" type="text" placeholder="<%- $.t('cluster_page.nodes_tab.node_management_panel.filter_placeholder') %>" <%= nodes.length ? '' : 'disabled' %>  />
+      <span class="btn-clear-filter"></span>
     </div>
     <% if (clusterNodesScreen) { %>
       <div class="cluster-toolbar-item pull-right">
