--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -2511,9 +2511,9 @@ input.error:focus {
       display: inline-block;
       float: left;
       width: 150px;
+      margin-left: -160px;
       font-size: 12px;
       line-height: 12px;
-      padding-right: 10px;
       word-break: break-all;
     }
   }
@@ -2523,6 +2523,7 @@ input.error:focus {
     margin-top: 3px;
     div {
       padding: 0;
+      padding-left: 160px;
       font-weight: normal;
       word-break: break-all;
       label {
@@ -3047,6 +3048,8 @@ hr.slim {
   margin-top: 10px;
 }
 
+.edit-node-disks .disk-box { margin-left: 0px; }
+
 .disk-box-name {
   font-size: 18px;
   color: @font-color-dark;
@@ -3175,6 +3178,7 @@ hr.slim {
   color: @font-color-dark;
   float: left;
   word-break: break-all;
+  max-width: 300px;
 }
 
 .disk-box .use-all-allowed {
@@ -3252,7 +3256,7 @@ hr.slim {
   height: 48px;
   border: 1px solid #d0d0d0;
   background-color: #e5e5e5;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   overflow: hidden;
   .box-sizing-mixin;
   &:hover {
